# type_form/models/SubmittedFormData.py
@@ -1,0 +1,9 @@
+from django.db import models
+from .DynamicForm import DynamicForm
+
+
+class SubmittedFormData(models.Model):
+
+    form = models.ForeignKey(DynamicForm,on_delete=models.CASCADE,related_name="submitteddata")
+    data = models.JSONField()
+    submitted_at = models.DateTimeField(auto_now_add=True)
